Change OpenAPI and server impl (#45)
